--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Umbrella</string>
     <string name="API_KEY">d9363c99f5cdfd3f1aae78c8b5d810d7</string>
+    <string name="today">Today</string>
 
 </resources>
